--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
     "@types/jwt-decode": "^3.1.0",
     "@types/leaflet": "^1.9.17",
     "@types/node": "^22.15.21",
+    "@types/papaparse": "^5.3.16",
     "@types/qrcode": "^1.5.5",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
