--- a/backend/package.json
+++ b/backend/package.json
@@ -53,6 +53,7 @@
     "express": "^5.1.0",
     "google-auth-library": "^9.15.1",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.20.0",
     "mongoose": "^8.15.0",
     "morgan": "^1.10.1",
     "multer": "^1.4.5-lts.2",
