--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^2.8.1",
     "axios": "^1.9.0",
     "canvas-confetti": "^1.9.3",
+    "emoji-picker-react": "^4.14.0",
     "framer-motion": "^12.12.1",
     "html5-qrcode": "^2.3.8",
     "jspdf": "^3.0.1",
@@ -21,6 +22,7 @@
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.511.0",
+    "moment": "^2.30.1",
     "papaparse": "^5.5.3",
     "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
