--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -13,7 +13,8 @@ server {
 
   # (Optional) If your frontend calls backend APIs
   location /api/ {
-    proxy_pass http://host.docker.internal:5000; # backend running on port 3000
+    #proxy_pass http://host.docker.internal:5000; # backend running on port 3000
+    proxy_pass http://backend:5000;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
   }
