--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -32,5 +32,6 @@ jobs:
         run: |
           docker build \
             --build-arg FRONTEND_VITE_REACT_APP_API_BASE_URL=${{ secrets.FRONTEND_VITE_REACT_APP_API_BASE_URL }} \
+            --build-arg FRONTEND_VITE_REACT_APP_SOCKET_URL=${{ secrets.FRONTEND_VITE_REACT_APP_SOCKET_URL }} \
             -t ${{ secrets.DOCKER_USERNAME }}/my-frontend:latest ./frontend
           docker push ${{ secrets.DOCKER_USERNAME }}/my-frontend:latest
