--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -11,7 +11,7 @@ server {
     try_files $uri /index.html;
   }
 
-  # (Optional) If your frontend calls backend APIs
+  # (Optional) If your frontend calls backend API
   location /api/ {
     #proxy_pass http://host.docker.internal:5000; # backend running on port 3000
     proxy_pass http://backend:5000;
