--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -21,7 +21,7 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # 3. Build and push backend image
+      # 3. Build and push backend images
       - name: Build and Push Backend
         run: |
           docker build -t ${{ secrets.DOCKER_USERNAME }}/my-backend:latest ./backend
