--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,21 +1,46 @@
+#server {
+  #listen 80;
+
+  #server_name localhost;
+
+  #root /usr/share/nginx/html;
+
+  #index index.html;
+
+  #location / {
+  #  try_files $uri /index.html;
+  #}
+
+  # (Optional) If your frontend calls backend API
+  #location /api/ {
+    #proxy_pass http://host.docker.internal:5000; # backend running on port 3000
+    #proxy_pass http://backend:5000;
+    #proxy_set_header Host $host;
+   # proxy_set_header X-Real-IP $remote_addr;
+  #}
+#}
 server {
   listen 80;
 
-  server_name localhost;
+  # ✅ 1️⃣ Use your real domain names, not localhost
+  server_name www.eventoo.co.in eventoo.co.in;
 
   root /usr/share/nginx/html;
-
   index index.html;
 
   location / {
     try_files $uri /index.html;
   }
 
-  # (Optional) If your frontend calls backend API
+  # ✅ 2️⃣ Route API requests to backend service (inside Docker)
   location /api/ {
-    #proxy_pass http://host.docker.internal:5000; # backend running on port 3000
-    proxy_pass http://backend:5000;
+    proxy_pass http://backend:5000/;   # backend = container name in 'webnet'
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "upgrade";
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
+    proxy_cache_bypass $http_upgrade;
   }
 }
+
