--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -33,8 +33,8 @@ server {
   }
 
   # ✅ 2️⃣ Route API requests to backend service (inside Docker)
-  location /api/ {
-    proxy_pass http://backend:5000/;   # backend = container name in 'webnet'
+  location /api/v1/ {
+    proxy_pass http://backend:5000/api/v1/;   # backend = container name in 'webnet'
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "upgrade";
