--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -32,7 +32,7 @@ server {
     try_files $uri /index.html;
   }
 
-  # ✅ 2️⃣ Route API requests to backend service (inside Docker)
+  # ✅ 2️⃣ Route API requests to backend service (inside docker)
   location /api/v1/ {
     proxy_pass http://backend:5000/api/v1/;   # backend = container name in 'webnet'
     proxy_http_version 1.1;
