--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -13,8 +13,18 @@ RUN npm install
 COPY . .
 #COPY .env ./ 
 # Build the app
+#ARG FRONTEND_VITE_REACT_APP_API_BASE_URL
+#ENV VITE_REACT_APP_API_BASE_URL=$FRONTEND_VITE_REACT_APP_API_BASE_URL
+# --- Build arguments for secrets ---
 ARG FRONTEND_VITE_REACT_APP_API_BASE_URL
+ARG FRONTEND_VITE_REACT_APP_SOCKET_URL
+ARG VITE_OPENCAGE_KEY
+
+# --- Set environment variables for Vite ---
 ENV VITE_REACT_APP_API_BASE_URL=$FRONTEND_VITE_REACT_APP_API_BASE_URL
+ENV VITE_REACT_APP_SOCKET_URL=$FRONTEND_VITE_REACT_APP_SOCKET_URL
+ENV FRONTEND_VITE_REACT_APP_OPENCAGE_API_KEY=$FRONTEND_VITE_REACT_APP_OPENCAGE_API_KEY
+
 RUN npm run build
 
 # Stage 2: Serve with Nginx
