--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -21,7 +21,7 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # 3. Build and push backend images
+      # 3. Build and push backend image
       - name: Build and Push Backend
         run: |
           docker build -t ${{ secrets.DOCKER_USERNAME }}/my-backend:latest ./backend
@@ -29,10 +29,11 @@ jobs:
 
       # 4. Build and push frontend image
       - name: Build and Push Frontend
-  run: |
-    docker build \
-      --build-arg FRONTEND_VITE_REACT_APP_API_BASE_URL=${{ secrets.FRONTEND_VITE_REACT_APP_API_BASE_URL }} \
-      --build-arg FRONTEND_VITE_REACT_APP_SOCKET_URL=${{ secrets.FRONTEND_VITE_REACT_APP_SOCKET_URL }} \
-      --build-arg FRONTEND_VITE_REACT_APP_OPENCAGE_API_KEY=${{ secrets.FRONTEND_VITE_REACT_APP_OPENCAGE_API_KEY }} \
-      -t ${{ secrets.DOCKER_USERNAME }}/my-frontend:latest ./frontend
-    docker push ${{ secrets.DOCKER_USERNAME }}/my-frontend:latest
+        run: |
+          docker build \
+            --build-arg FRONTEND_VITE_REACT_APP_API_BASE_URL=${{ secrets.FRONTEND_VITE_REACT_APP_API_BASE_URL }} \
+            --build-arg FRONTEND_VITE_REACT_APP_SOCKET_URL=${{ secrets.FRONTEND_VITE_REACT_APP_SOCKET_URL }} \
+            --build-arg FRONTEND_VITE_REACT_APP_OPENCAGE_API_KEY=${{ secrets.FRONTEND_VITE_REACT_APP_OPENCAGE_API_KEY }} \
+            -t ${{ secrets.DOCKER_USERNAME }}/my-frontend:latest ./frontend
+
+          docker push ${{ secrets.DOCKER_USERNAME }}/my-frontend:latest
