opencage key set

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -18,7 +18,7 @@ COPY . .
 # --- Build arguments for secrets ---
 ARG FRONTEND_VITE_REACT_APP_API_BASE_URL
 ARG FRONTEND_VITE_REACT_APP_SOCKET_URL
-ARG VITE_OPENCAGE_KEY
+ARG FRONTEND_VITE_REACT_APP_OPENCAGE_API_KEY
 
 # --- Set environment variables for Vite ---
 ENV VITE_REACT_APP_API_BASE_URL=$FRONTEND_VITE_REACT_APP_API_BASE_URL
