--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -35,5 +35,42 @@ jobs:
             --build-arg FRONTEND_VITE_REACT_APP_SOCKET_URL=${{ secrets.FRONTEND_VITE_REACT_APP_SOCKET_URL }} \
             --build-arg FRONTEND_VITE_REACT_APP_OPENCAGE_API_KEY=${{ secrets.FRONTEND_VITE_REACT_APP_OPENCAGE_API_KEY }} \
             -t ${{ secrets.DOCKER_USERNAME }}/my-frontend:latest ./frontend
-
           docker push ${{ secrets.DOCKER_USERNAME }}/my-frontend:latest
+
+  deploy-to-ec2:
+    runs-on: ubuntu-latest
+    needs: build-and-push
+
+    steps:
+      - name: SSH into EC2 and deploy
+        uses: appleboy/ssh-action@v0.1.10
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: |
+            # Pull latest images
+            docker pull ${{ secrets.DOCKER_USERNAME }}/my-backend:latest
+            docker pull ${{ secrets.DOCKER_USERNAME }}/my-frontend:latest
+            
+            # Stop old containers if running
+            docker stop backend || true
+            docker stop frontend || true
+
+            # Remove old containers
+            docker rm backend || true
+            docker rm frontend || true
+
+            # Run new containers with network and env file
+            docker run -d \
+              --name backend \
+              --network webnet \
+              --env-file /home/ubuntu/mern-deploy/.env \
+              -p 5000:5000 \
+              ${{ secrets.DOCKER_USERNAME }}/my-backend:latest
+
+            docker run -d \
+              --name frontend \
+              --network webnet \
+              -p 8080:80 \
+              ${{ secrets.DOCKER_USERNAME }}/my-frontend:latest
