--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -24,13 +24,13 @@ jobs:
       # 3. Build and push backend image
       - name: Build and Push Backend
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/my-backend:latest ./backend
+          docker build --no-cache -t ${{ secrets.DOCKER_USERNAME }}/my-backend:latest ./backend
           docker push ${{ secrets.DOCKER_USERNAME }}/my-backend:latest
 
       # 4. Build and push frontend image
       - name: Build and Push Frontend
         run: |
-          docker build \
+          docker build --no-cache \
             --build-arg FRONTEND_VITE_REACT_APP_API_BASE_URL=${{ secrets.FRONTEND_VITE_REACT_APP_API_BASE_URL }} \
             --build-arg FRONTEND_VITE_REACT_APP_SOCKET_URL=${{ secrets.FRONTEND_VITE_REACT_APP_SOCKET_URL }} \
             --build-arg FRONTEND_VITE_REACT_APP_OPENCAGE_API_KEY=${{ secrets.FRONTEND_VITE_REACT_APP_OPENCAGE_API_KEY }} \
