--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -21,21 +21,25 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # 3. Build and push backend image
+      # 3. Build and push backend image with commit SHA tag
       - name: Build and Push Backend
         run: |
-          docker build --no-cache -t ${{ secrets.DOCKER_USERNAME }}/my-backend:latest ./backend
-          docker push ${{ secrets.DOCKER_USERNAME }}/my-backend:latest
+          BACKEND_TAG=${GITHUB_SHA::7}  # first 7 chars of commit SHA
+          docker build --no-cache -t ${{ secrets.DOCKER_USERNAME }}/my-backend:$BACKEND_TAG ./backend
+          docker push ${{ secrets.DOCKER_USERNAME }}/my-backend:$BACKEND_TAG
+          echo "BACKEND_TAG=$BACKEND_TAG" >> $GITHUB_ENV
 
-      # 4. Build and push frontend image
+      # 4. Build and push frontend image with commit SHA tag
       - name: Build and Push Frontend
         run: |
+          FRONTEND_TAG=${GITHUB_SHA::7}
           docker build --no-cache \
             --build-arg FRONTEND_VITE_REACT_APP_API_BASE_URL=${{ secrets.FRONTEND_VITE_REACT_APP_API_BASE_URL }} \
             --build-arg FRONTEND_VITE_REACT_APP_SOCKET_URL=${{ secrets.FRONTEND_VITE_REACT_APP_SOCKET_URL }} \
             --build-arg FRONTEND_VITE_REACT_APP_OPENCAGE_API_KEY=${{ secrets.FRONTEND_VITE_REACT_APP_OPENCAGE_API_KEY }} \
-            -t ${{ secrets.DOCKER_USERNAME }}/my-frontend:latest ./frontend
-          docker push ${{ secrets.DOCKER_USERNAME }}/my-frontend:latest
+            -t ${{ secrets.DOCKER_USERNAME }}/my-frontend:$FRONTEND_TAG ./frontend
+          docker push ${{ secrets.DOCKER_USERNAME }}/my-frontend:$FRONTEND_TAG
+          echo "FRONTEND_TAG=$FRONTEND_TAG" >> $GITHUB_ENV
 
   deploy-to-ec2:
     runs-on: ubuntu-latest
@@ -49,28 +53,29 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            # Pull latest images
-            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/my-backend:latest
-            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/my-frontend:latest
+            # Use tags from previous job
+            BACKEND_TAG=${{ env.BACKEND_TAG }}
+            FRONTEND_TAG=${{ env.FRONTEND_TAG }}
+
+            # Pull the exact images
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/my-backend:$BACKEND_TAG
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/my-frontend:$FRONTEND_TAG
             
-            # Stop old containers if running
-            sudo docker stop backend || true
-            sudo docker stop frontend || true
+            # Stop and remove old containers
+            sudo docker rm -f backend || true
+            sudo docker rm -f frontend || true
 
-            # Remove old containers
-            sudo docker rm backend || true
-            sudo docker rm frontend || true
-
-            # Run new containers with network and env file
+            # Run new backend container
             sudo docker run -d \
               --name backend \
               --network webnet \
               --env-file /home/ubuntu/mern-deploy/.env \
               -p 5000:5000 \
-              ${{ secrets.DOCKER_USERNAME }}/my-backend:latest
+              ${{ secrets.DOCKER_USERNAME }}/my-backend:$BACKEND_TAG
 
+            # Run new frontend container
             sudo docker run -d \
               --name frontend \
               --network webnet \
               -p 8080:80 \
-              ${{ secrets.DOCKER_USERNAME }}/my-frontend:latest
+              ${{ secrets.DOCKER_USERNAME }}/my-frontend:$FRONTEND_TAG
