--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -3,43 +3,49 @@ name: CI/CD Pipeline
 on:
   push:
     branches:
-      - main  # runs when you push to main branch
+      - main
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
+    outputs:
+      BACKEND_TAG: ${{ steps.set-tags.outputs.BACKEND_TAG }}
+      FRONTEND_TAG: ${{ steps.set-tags.outputs.FRONTEND_TAG }}
 
     steps:
-      # 1. Checkout code
+      # 1️⃣ Checkout code
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # 2. Log in to Docker Hub
+      # 2️⃣ Log in to Docker Hub
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # 3. Build and push backend image with commit SHA tag
+      # 3️⃣ Set commit SHA tags
+      - name: Set tags
+        id: set-tags
+        run: |
+          echo "BACKEND_TAG=${GITHUB_SHA::7}" >> $GITHUB_OUTPUT
+          echo "FRONTEND_TAG=${GITHUB_SHA::7}" >> $GITHUB_OUTPUT
+
+      # 4️⃣ Build and push backend image
       - name: Build and Push Backend
         run: |
-          BACKEND_TAG=${GITHUB_SHA::7}  # first 7 chars of commit SHA
-          docker build --no-cache -t ${{ secrets.DOCKER_USERNAME }}/my-backend:$BACKEND_TAG ./backend
-          docker push ${{ secrets.DOCKER_USERNAME }}/my-backend:$BACKEND_TAG
-          echo "BACKEND_TAG=$BACKEND_TAG" >> $GITHUB_ENV
+          docker build --no-cache -t ${{ secrets.DOCKER_USERNAME }}/my-backend:${GITHUB_SHA::7} ./backend
+          docker push ${{ secrets.DOCKER_USERNAME }}/my-backend:${GITHUB_SHA::7}
 
-      # 4. Build and push frontend image with commit SHA tag
+      # 5️⃣ Build and push frontend image
       - name: Build and Push Frontend
         run: |
-          FRONTEND_TAG=${GITHUB_SHA::7}
           docker build --no-cache \
             --build-arg FRONTEND_VITE_REACT_APP_API_BASE_URL=${{ secrets.FRONTEND_VITE_REACT_APP_API_BASE_URL }} \
             --build-arg FRONTEND_VITE_REACT_APP_SOCKET_URL=${{ secrets.FRONTEND_VITE_REACT_APP_SOCKET_URL }} \
             --build-arg FRONTEND_VITE_REACT_APP_OPENCAGE_API_KEY=${{ secrets.FRONTEND_VITE_REACT_APP_OPENCAGE_API_KEY }} \
-            -t ${{ secrets.DOCKER_USERNAME }}/my-frontend:$FRONTEND_TAG ./frontend
-          docker push ${{ secrets.DOCKER_USERNAME }}/my-frontend:$FRONTEND_TAG
-          echo "FRONTEND_TAG=$FRONTEND_TAG" >> $GITHUB_ENV
+            -t ${{ secrets.DOCKER_USERNAME }}/my-frontend:${GITHUB_SHA::7} ./frontend
+          docker push ${{ secrets.DOCKER_USERNAME }}/my-frontend:${GITHUB_SHA::7}
 
   deploy-to-ec2:
     runs-on: ubuntu-latest
@@ -53,14 +59,14 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            # Use tags from previous job
-            BACKEND_TAG=${{ env.BACKEND_TAG }}
-            FRONTEND_TAG=${{ env.FRONTEND_TAG }}
+            # ✅ Get the commit SHA tags from the previous job
+            BACKEND_TAG=${{ needs.build-and-push.outputs.BACKEND_TAG }}
+            FRONTEND_TAG=${{ needs.build-and-push.outputs.FRONTEND_TAG }}
 
-            # Pull the exact images
+            # Pull images from Docker Hub
             sudo docker pull ${{ secrets.DOCKER_USERNAME }}/my-backend:$BACKEND_TAG
             sudo docker pull ${{ secrets.DOCKER_USERNAME }}/my-frontend:$FRONTEND_TAG
-            
+
             # Stop and remove old containers
             sudo docker rm -f backend || true
             sudo docker rm -f frontend || true
