--- a/backend/package.json
+++ b/backend/package.json
@@ -43,6 +43,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "@huggingface/inference": "^4.7.1",
+    "@sendgrid/mail": "^8.1.6",
     "@xenova/transformers": "^2.17.2",
     "bcrypt": "^5.1.1",
     "bwip-js": "^4.7.0",
